--- a/tracks/templates/index.html
+++ b/tracks/templates/index.html
@@ -2,146 +2,207 @@
 <html lang="en">
 
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet"
-    integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
-  <script src="//unpkg.com/alpinejs" defer></script>
-  <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
-  <title>Simple CRUD</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
+    <script src="//unpkg.com/alpinejs" defer></script>
+    <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
+    <title>Simple CRUD</title>
 </head>
 
 <body>
-  <div x-data="appData()">
+    <div x-data="appData()">
 
-    <!--Modal-->
-    <!-- Button trigger modal -->
-    <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#myModal">
-      Adicionar
-    </button>
+        <!--Modal-->
+        <!-- Button trigger modal -->
+        <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#myModal">
+            Adicionar
+        </button>
 
 
-    <!--Form-->
-    <form action="" method="post"></form>
-    <!--endform-->
-
-    <!-- Modal -->
-    <div class="modal fade" id="myModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
-      <div class="modal-dialog">
-        <div class="modal-content">
-          <div class="modal-header">
-            <h1 class="modal-title fs-5" id="exampleModalLabel">Modal title</h1>
-            <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-          </div>
-          <div class="modal-body">
-            <label for="title">Title</label>
-            <input id="id_title" name="title" class="form-control" type="text" required x-model="editItem.title">
-            <label for="artist">Artist</label>
-            <input id="id_artist" name="artist" class="form-control" type="text" required x-model="editItem.artist">
-            <label for="last_play">Last Play</label>
-            <input id="id_last_play" name="last_play" class="form-control" required type="datetime-local"
-              x-model="editItem.last_play">
-            <label for="duration">Duration</label>
-            <input id="id_duration" name="duration" class="form-control" type="number" required x-model="editItem.duration">
-          </div>
-          <div class="modal-footer">
-            <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-            <button type="button" class="btn btn-primary" data-bs-dismiss="modal"
-              @click="saveData">Save changes</button>
-          </div>
-        </div>
-      </div>
-    </div>
-    <!--EndModal-->
-
-    <h1>Lista de Faixas</h1>
-    <ul>
-      <template x-for="(track, id) in tracks" :key="track.id">
-        <li>
-          <strong>Id:</strong> <span x-text="track.id"></span><br>
-          <strong>Title:</strong> <span x-text="track.title"></span><br>
-          <strong>Artist:</strong> <span x-text="track.artist"></span><br>
-          <strong>Duration:</strong> <span x-text="track.duration"></span><br>
-          <strong>Last Play:</strong> <span x-text="track.last_play"></span><br>
-          <div class="container text-center">
-            <div class="row g-2">
-              <div class="col-6">
-                <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#myModal"
-                  aria-label="Close" @click="editData(track)">Alterar</button>
-                <button type="button" class="btn btn-danger" aria-label="Close"
-                  @click="deleteItem(track)">Remover</button>
-              </div>
+        <!-- Modal -->
+        <div class="modal fade" id="myModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+            <div class="modal-dialog">
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <h1 class="modal-title fs-5" id="exampleModalLabel">Modal title</h1>
+                        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                    </div>
+                    <div class="modal-body">
+                        <label for="title">Title</label>
+                        <input id="id_title" name="title" class="form-control" type="text" required
+                            x-model="editItem.title">
+                        <label for="artist">Artist</label>
+                        <input id="id_artist" name="artist" class="form-control" type="text" required
+                            x-model="editItem.artist">
+                        <label for="last_play">Last Play</label>
+                        <input id="id_last_play" name="last_play" class="form-control" required type="datetime-local"
+                            x-model="editItem.last_play">
+                        <label for="duration">Duration</label>
+                        <input id="id_duration" name="duration" class="form-control" type="number" required
+                            x-model="editItem.duration">
+                    </div>
+                    <div class="modal-footer">
+                        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+                        <button type="button" class="btn btn-primary" data-bs-dismiss="modal" @click="saveData">Save
+                            changes</button>
+                    </div>
+                </div>
             </div>
-          </div>
-        </li>
-      </template>
-    </ul>
-  </div>
+        </div>
+        <!--EndModal-->
 
-  <script>
+        <!-- Edit Modal -->
+        <div class="modal fade" id="myEditModal" tabindex="-1" aria-labelledby="exampleEditModalLabel"
+            aria-hidden="true">
+            <div class="modal-dialog">
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <h1 class="modal-title fs-5" id="exampleEditModalLabel">Edit Modal title</h1>
+                        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                    </div>
+                    <form @submit.prevent="updateData()" x-show="!addMode">
+                        <div class="modal-body">
+                            <label for="title">Title</label>
+                            <input id="id_title" name="title" class="form-control" type="text" required
+                                x-model="form.title">
+                            <label for="artist">Artist</label>
+                            <input id="id_artist" name="artist" class="form-control" type="text" required
+                                x-model="form.artist">
+                            <label for="last_play">Last Play</label>
+                            <input id="id_last_play" name="last_play" class="form-control" required
+                                type="datetime-local" x-model="form.last_play">
+                            <label for="duration">Duration</label>
+                            <input id="id_duration" name="duration" class="form-control" type="number" required
+                                x-model="form.duration">
+                        </div>
+                        <div class="modal-footer">
+                            <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+                            <button type="button" class="btn btn-primary" data-bs-dismiss="modal">Update</button>
+                        </div>
+                    </form>
+                </div>
+            </div>
+        </div>
+        <!--EndModal-->
 
-    const apiUrl = 'http://localhost:8000/api/tracks'
-    const headers = { 'Content-Type': 'application/json' }
+        <h1>Lista de Faixas</h1>
+        <ul>
+            <template x-for="(track, id) in tracks" :key="track.id">
+                <li>
+                    <strong>Id:</strong> <span x-text="track.id"></span><br>
+                    <strong>Title:</strong> <span x-text="track.title"></span><br>
+                    <strong>Artist:</strong> <span x-text="track.artist"></span><br>
+                    <strong>Duration:</strong> <span x-text="track.duration"></span><br>
+                    <strong>Last Play:</strong> <span x-text="track.last_play"></span><br>
+                    <div class="container text-center">
+                        <div class="row g-2">
+                            <div class="col-6">
+                                <button type="button" class="btn btn-primary" data-bs-toggle="modal"
+                                    data-bs-target="#myEditModal" aria-label="Close"
+                                    @click="editTrack(track)">Alterar</button>
+                                <button type="button" class="btn btn-danger" aria-label="Close"
+                                    @click="deleteItem(track)">Remover</button>
+                            </div>
+                        </div>
+                    </div>
+                </li>
+            </template>
+        </ul>
+    </div>
 
-    const appData = () => ({
-      tracks: [],
-      editItem: {},
-      selectedTrack: {},
+    <script>
 
-      init() {
-        this.getTracks()
-      },
+        const apiUrl = 'http://localhost:8000/api/tracks'
+        const headers = { 'Content-Type': 'application/json' }
 
-      getTracks() {
-        axios.get(apiUrl)
-          .then(response => {
-            this.tracks = response.data
-          })
-      },
+        const appData = () => ({
+            addMode: true,
+            tracks: [],
+            editItem: {},
+            selectedTrack: {},
+            form: {
+                id: '',
+                title: '',
+                artist: '',
+                duration: '',
+                last_play: ''
+            },
 
-      resetForm() {
-        this.editItem = {}
-      },
+            init() {
+                this.getTracks()
+            },
 
-      saveData() {
-        if (!this.editItem) {
-          return
-        }
-        const bodyData = { ...this.editItem }
-        axios.post(apiUrl, bodyData, { headers: headers })
-          .then(response => {
-            this.tracks = [response.data, ...this.tracks]
-            this.resetForm()
-          })
-      },
+            getTracks() {
+                axios.get(apiUrl)
+                    .then(response => {
+                        this.tracks = response.data
+                    })
+            },
 
+            resetForm() {
+                this.editItem = {}
+            },
 
+            saveData() {
+                if (!this.editItem) {
+                    return
+                }
+                const bodyData = { ...this.editItem }
+                axios.post(apiUrl, bodyData, { headers: headers })
+                    .then(response => {
+                        this.tracks = [response.data, ...this.tracks]
+                        this.resetForm()
+                    })
+            },
 
-      editData(track){
-          // logica de editar item clicando no botão alterar.
-          axios.put(`http://localhost:8000/api/tracks/${track.id}`)
-          .then((res) => {
-            if (res.data.success) {
-            }
-          })
-          .catch((err) => console.log(err))
-      },
+            editTrack(track) {
+                document.getElementById('myEditModal').classList.toggle('hidden')
+                this.addMode = false
+                this.form.id = track.id
+                this.form.title = track.title
+                this.form.artist = track.artist
+                this.form.duration = track.duration
+                this.form.last_play = track.last_play
+            },
 
-      deleteItem(track) {
-        axios.delete(`http://localhost:8000/api/tracks/${track.id}`)
-          .then((res) => {
-            if (res.data.success) {
-              this.tracks.splice(this.tracks.indexOf(track), 1)
-            }
-          })
-          .catch((err) => console.log(err))
-      },
+            updateData() {
+                if (this.form.title.length &&
+                    this.form.artist.length &&
+                    this.form.duration.length &&
+                    this.form.last_play.length) {
+                    this.tracks.splice(this.tracks.indexOf(track), 1, {
+                        title: this.form.title,
+                        artist: this.form.artist,
+                        duration: this.form.duration,
+                        last_play: this.form.last_play
+                    })
+                    this.cancelEdit()
+                }
+            },
 
-    })
-  </script>
+            cancelEdit() {
+                document.getElementById('myEditModal').classList.toggle('hidden')
+                this.resetForm()
+            },
+
+            deleteItem(track) {
+                axios.delete(`http://localhost:8000/api/tracks/${track.id}`)
+                    .then((res) => {
+                        if (res.data.success) {
+                            this.tracks.splice(this.tracks.indexOf(track), 1)
+                        }
+                    })
+                    .catch((err) => console.log(err))
+            },
+
+        })
+    </script>
 
 </body>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"
-  integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm" crossorigin="anonymous"></script>
+    integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm"
+    crossorigin="anonymous"></script>
 
 </html>
