--- a/tracks/templates/index.html
+++ b/tracks/templates/index.html
@@ -8,19 +8,21 @@
         integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
     <script src="//unpkg.com/alpinejs" defer></script>
     <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
+    <style>
+        .b-example-divider {
+            width: 100%;
+            height: 3rem;
+            background-color: rgba(0, 0, 0, .1);
+            border: solid rgba(0, 0, 0, .15);
+            border-width: 1px 0;
+            box-shadow: inset 0 .5em 1.5em rgba(0, 0, 0, .1), inset 0 .125em .5em rgba(0, 0, 0, .15);
+        }
+    </style>
     <title>Simple CRUD</title>
 </head>
 
 <body>
     <div x-data="appData()">
-
-        <!--Modal-->
-        <!-- Button trigger modal -->
-        <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#myModal">
-            Adicionar
-        </button>
-
-
         <!-- Modal -->
         <div class="modal fade" id="myModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
             <div class="modal-dialog">
@@ -87,29 +89,48 @@
         </div>
         <!--EndModal-->
 
-        <h1>Lista de Faixas</h1>
-        <ul>
-            <template x-for="(track, id) in tracks" :key="track.id">
-                <li>
-                    <strong>Id:</strong> <span x-text="track.id"></span><br>
-                    <strong>Title:</strong> <span x-text="track.title"></span><br>
-                    <strong>Artist:</strong> <span x-text="track.artist"></span><br>
-                    <strong>Duration:</strong> <span x-text="track.duration"></span><br>
-                    <strong>Last Play:</strong> <span x-text="track.last_play"></span><br>
-                    <div class="container text-center">
-                        <div class="row g-2">
-                            <div class="col-6">
-                                <button type="button" class="btn btn-primary" data-bs-toggle="modal"
-                                    data-bs-target="#myEditModal" aria-label="Close"
-                                    @click="editTrack(track)">Alterar</button>
-                                <button type="button" class="btn btn-danger" aria-label="Close"
-                                    @click="deleteItem(track)">Remover</button>
+        <div class="d-flex flex-column flex-md-row p-4 gap-4 py-md-5 align-items-center justify-content-center">
+            <h2>Lista de Musicas</h2>
+        </div>
+
+        <div class="d-flex flex-column flex-md-row align-items-center justify-content-center">
+            <!--Modal-->
+            <!-- Button trigger modal -->
+            <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#myModal">
+                Adicionar
+            </button>
+        </div>
+
+        <div class="d-flex flex-column flex-md-row p-3 gap-3 py-md-3 align-items-center justify-content-center">
+            <div class="list-group">
+                <template x-for="(track, id) in tracks" :key="track.id">
+                    <a href="#" class="list-group-item list-group-item-action d-flex gap-3 py-3" aria-current="true">
+                        <img src="https://www.svgrepo.com/show/530388/headphones-music.svg" alt="twbs" width="32"
+                            height="32" class="rounded-circle flex-shrink-0">
+                        <div class="d-flex gap-2 w-100 justify-content-between">
+                            <div>
+                                <strong class="mb-0">Title:</strong> <span x-text="track.title"></span><br>
+                                <strong>Artist:</strong> <span class="mb-0 opacity-75" x-text="track.artist"></span><br>
+                                <strong>Duration:</strong> <span class="mb-0 opacity-75"
+                                    x-text="track.duration"></span><br>
+                                <strong>Last Play:</strong> <span class="mb-0 opacity-75"
+                                    x-text="track.last_play"></span><br>
+                                <div class="container text-center">
+                                    <div class="row align-items-center justify-content-center">
+                                        <div class="col-auto">
+                                            <button type="button" class="btn btn-primary" data-bs-toggle="modal"
+                                                data-bs-target="#myEditModal" @click="editTrack(track)">Alterar</button>
+                                            <button type="button" class="btn btn-danger" aria-label="Close"
+                                                @click="deleteItem(track)">Remover</button>
+                                        </div>
+                                    </div>
+                                </div>
                             </div>
                         </div>
-                    </div>
-                </li>
-            </template>
-        </ul>
+                    </a>
+                </template>
+            </div>
+        </div>
     </div>
 
     <script>
